--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "core-js": "^3.4.4",
+    "fibers": "^4.0.2",
+    "sass": "^1.24.2",
+    "utf-8-validate": "^5.0.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
