--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,7 +17,7 @@ pipelines:
             - npm install
             - npm run-script test:unit
             - npm run-script lint
-            - zip -r application.zip
+            - zip -r application.zip .
             - pipe:                    atlassian/aws-elasticbeanstalk-deploy:0.5.4
               variables:
                 AWS_ACCESS_KEY_ID:     $AWS_ACCESS_KEY_ID
