--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3"
+    "echarts": "^4.6.0",
+    "vue-router": "^3.1.3",
+    "vue-echarts": "^4.1.0",
+    "vue-functional-calendar": "^2.7.3",
+    "web3": "^1.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
