Add dependency caches for faster builds

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,6 +3,8 @@ image:                                 atlassian/default-image:2
 pipelines:
   default:
     - step:
+        caches:
+          - node
         name:                          "Build and Test"
         script:
           - echo "Build, Test and Upload"
@@ -12,6 +14,8 @@ pipelines:
   branches:
     master:
       - step:
+          caches:
+          - node
           name:                        "Build, Test and Upload"
           script:
             - echo "Build, Test and Upload"
