--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-image:                                 atlassian/default-image:2
+image:                                node:12.13.1
 
 pipelines:
   default:
@@ -20,7 +20,7 @@ pipelines:
           script:
             # PACKAGE INSTALLATIONS
             - echo "Build, Test and Upload"
-            - apt-get install jq
+            - apt-get install jq zip
             - npm install
             - npm run-script test:unit
             - npm run-script build
