--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,11 +22,11 @@ pipelines:
             - echo "Build, Test and Upload"
             - apt-get update
             - apt-get install jq zip -y
+            - npm install -g gulp
             - npm install
             - npm run-script test:unit
             - npm run-script build
             # AUTO VERSIONING
-            - npm install gulp
             - git config remote.origin.url https://$USERNAME:$PASSWORD@bitbucket.org/$USERNAME/liquidity-reserve-dashboard.git
             - gulp autoversion
             - git init
@@ -55,7 +55,8 @@ pipelines:
           deployment:                  staging
           script:
           - echo "Deployment to Staging!"
-          - apt-get install jq
+          - apt-get update
+          - apt-get install jq zip -y
           - declare -x VERSION=$(jq -r '.version' package.json)
           - pipe:                      atlassian/aws-elasticbeanstalk-deploy:0.5.5
             variables:
@@ -73,7 +74,8 @@ pipelines:
           trigger:                     manual
           script:
             - echo "Deployment to Production!"
-            - apt-get install jq
+            - apt-get update
+            - apt-get install jq zip -y
             - declare -x VERSION=$(jq -r '.version' package.json)
             - pipe:                    atlassian/aws-elasticbeanstalk-deploy:0.5.5
               variables:
