--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liquidity-reserve-dashboard",
-  "version": "0.2.38",
+  "version": "0.2.47",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -14,7 +14,11 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
     "echarts": "^4.6.0",
+    "graceful-fs": "^4.2.3",
     "gulp": "^4.0.2",
+    "gulp-json-modify": "^1.0.2",
+    "gulp4-run-sequence": "^1.0.0",
+    "jquery": "^3.4.1",
     "vue": "^2.6.11",
     "vue-echarts": "^4.1.0",
     "vue-functional-calendar": "^2.7.3",
