--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-json-modify": "^1.0.2",
     "gulp4-run-sequence": "^1.0.0",
     "jquery": "^3.4.1",
+    "truffle-contract": "^4.0.31",
     "vue": "^2.6.11",
     "vue-echarts": "^4.1.0",
     "vue-functional-calendar": "^2.7.3",
