--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "vue-echarts": "^4.1.0",
     "vue-functional-calendar": "^2.7.3",
     "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0",
     "web3": "^1.2.4"
   },
   "devDependencies": {
