--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -24,6 +24,7 @@ pipelines:
             - echo "Build, Test and Upload"
             - apt-get update
             - apt-get install jq zip -y
+            - apt-get --assume-yes install jq zip -y
             - npm install
             - npm run-script test:unit
             - npm run-script build
