--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue-functional-calendar": "^2.7.3",
     "vue-router": "^3.1.3",
     "web3": "^1.2.4",
-    "accounting": "^0.4.1"
+    "accounting": "^0.4.1",
+    "vuex": "^3.1.2",
+    "truffle-contract": "^4.0.31"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
