--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
     "echarts": "^4.6.0",
     "jquery": "^3.4.1",
-    "truffle-contract": "^4.0.31",
     "npm-version": "^1.1.0",
+    "truffle-contract": "^4.0.31",
     "vue": "^2.6.11",
     "vue-echarts": "^4.1.0",
     "vue-functional-calendar": "^2.7.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^2.7.0",
-    "web3": "^1.2.4",
-    "accounting": "^0.4.1"
+    "web3": "^1.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
