--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-functional-calendar": "^2.7.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
+    "vuex-persist": "^2.2.0",
     "vuex-persistedstate": "^2.7.0",
     "web3": "^1.2.4"
   },
