--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm-version": "^1.1.0",
     "truffle-contract": "^4.0.31",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-echarts": "^4.1.0",
     "vue-functional-calendar": "^2.7.3",
     "vue-router": "^3.1.3",
